spacing fixes

--- a/style.css
+++ b/style.css
@@ -150,6 +150,7 @@ a:hover {
 
 section {
   padding-top: 4vh;
+  padding-bottom: 10vh;
   margin: 0 10rem;
   box-sizing: border-box;
   min-height: fit-content;
